# DeepParse-Engine

./: .gitignore  README.md  main.py  pyproject.toml
dashboard/: documents.html  documents.tsx  frontend.tsx  index.html  index.ts  package.json  styles.css  types.ts
dashboard/components/: App.tsx  DocumentExplorer.tsx  (+8 more)
evaluation/: __init__.py  cache.py  field_comparator.py  llm_evaluator.py  main.py  models.py  report.py  runner.py  schema_validator.py  scorer.py  visualizer.py
evaluation_results/: cache_11_HQS_Inspection_Form.json  cache_RHSP-Inspection-Checklist-Multi-Family-Part-1-Common-Areas.json
output/: 11_HQS_Inspection_Form_bedrock_qwen.json  11_HQS_Inspection_Form_bedrock_qwen_qwen3-vl-235b-a22b.json  PropertyInspectionChecklist_bedrock_google_gemma-3-27b-it.json  PropertyInspection_from_bedrock_qwen.qwen3-vl-235b-a22b.json  inspection_result.json  output_11_HQS_Inspection_Form.json  output_11_HQS_Inspection_Form_deepseek.json  output_PropertyInspectionCheckList_bedrock_qwen.json  output_PropertyInspectionChecklist.json  output_sample-inspection-form.json  output_sample-inspection-form_bedrock_qwen.json  output_sample-inspection-form_deepseek.json  sample-inspection-form_bedrock_qwen_qwen3-vl-235b-a22b.json
source_of_truth/: 11_HQS_Inspection_Form.json  RHSP-Inspection-Checklist-Multi-Family-Part-1-Common-Areas.json  sample-inspection-form.json
src/: App.tsx  __init__.py  bedrock_extractor.py  index.css  index.html  json_extractor.py  ocr_engine.py  pdf_processor.py  pipeline.py  schemas.py  usage_logger.py
templates/: inspection_template.json
(+39 files in other folders)
